--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 	
+	<meta charset="UTF-8">
+  <meta name="description" content="Forms">
+  <meta name="keywords" content="Forms">
+  <meta name="author" content="Gouri Deshpande">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<title>  Linkedin Login, Sign Up </title>
 	<style>
 
