--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <input type="email" name="email" placeholder="Email or Phone number" > <br> <br>
       <input type="password" name="email" placeholder="Password" > </form> <br> 
 
-      <a class="ee" href="#" > <b class="yy" >Forget Password </b>  </a> <br>  <br> <button><b> Sign in </b> </button> </form>
+      <a class="ee" href="#" > <b class="yy" >Forget Password </b>  </a> <br>  <br> <button type="submit" ><b> Sign in </b> </button> </form>
 
 	</div> <br> <br>
 
