--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   method="POST"
 >	  
       <input type="email" name="email" placeholder="Email or Phone number" > <br> <br>
-      <input type="password" name="email" placeholder="Password" > </form> <br> 
+      <input type="password" name="email" placeholder="Password" > <br> 
 
       <a class="ee" href="#" > <b class="yy" >Forget Password </b>  </a> <br>  <br> <button type="submit" ><b> Sign in </b> </button> </form>
 
