--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 >
 	
       <input type="email" name="email" placeholder="Email or Phone number" > <br> <br>
-      <input type="password" name="email" placeholder="Password" >  <br> <br>
+      <input type="password" name="password" placeholder="Password" >  <br> <br>
 
       <a class="ee" href="#" > <b class="yy" >Forget Password </b>  </a> <br>   <br>
 
